--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -137,6 +137,29 @@ h2 {
   font-weight: 200;
 }
 
+.photo-circle {
+  display: block;
+  float: left;
+  margin-top: 5px;
+  margin-right: 27px;
+  width: 128px;
+  height: 128px;
+  border-radius: 100px;
+  background: url("../cleri-photo.jpg") no-repeat;
+  background-position: 50% 50%;
+  background-size: 100% 100%;
+}
+
+.about-me {
+  float: left;
+  width: 72%;
+  padding-left: 23px;
+  border-left: 1px solid black
+}
+
+.about-section {
+  margin-top: 40px;
+}
 .projects {
   padding: 0;
 }
@@ -151,11 +174,24 @@ li {
 
 .project-image {
   width: 100%;
+  position: relative;
+  top: 10px;
   margin-bottom: 10px;
   border: 1px solid gray;
   border-radius: 5px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
+.description {
+  /*position: relative;
+  top: -201px;
+  left: 50px;*/
+}
+
+
+.description:hover {
+
+}
 
 .project {
   width: 100%;
@@ -174,6 +210,8 @@ li {
   width: 70%;
 }
 
+
+
 .ghub-link {
   position: absolute;
   bottom: 0;
@@ -189,6 +227,18 @@ li {
   font-size: 12px;
 }
 
+@media only screen and (max-width : 1160px) {
+
+  .about-me {
+    width: 65%;
+    padding-left: 20px;
+  }
+  .photo-circle {
+    margin-right: 12px;
+  }
+
+}
+
 @media only screen and (max-width : 992px) {
 
   .main-content {
@@ -198,9 +248,25 @@ li {
 
 }
 
+@media only screen and (max-width : 937px) {
+
+  .photo-circle {
+    display: none;
+  }
+  .about-me {
+    border: none;
+    padding-left: 0px;
+    width: 100%;
+  }
+
+}
+
 @media only screen and (max-width : 480px) {
 
   .right-white, .left-white {
+    display: none;
+  }
+  .project-circle {
     display: none;
   }
 
