--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -95,12 +95,14 @@ h2 {
   z-index: 1;
 }
 
+
 .left-nav a {
   color: #000;
   display: inline-block;
   text-align: right;
   text-decoration: none;
   line-height: 20px;
+  padding-left: 10px;
 }
 
 .left-nav a:hover {
@@ -109,7 +111,7 @@ h2 {
 
 .left-nav ul {
   background-color: white;
-  padding: 20px 23px 20px 16px;
+  padding: 20px 11px 20px 10px;
   margin: 0 auto;
 }
 
@@ -118,6 +120,15 @@ h2 {
   top: 10px;
   left: 400px;
   z-index: 50000;
+}
+
+
+.active {
+  background-color: rgba(166,25,60,.2);
+}
+
+.active a:hover {
+  
 }
 
 #notice {
