change background color

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,7 +31,7 @@ body {
 html {
   height: 100%;
   width: 80%;
-  background-color: #F5F5DC;
+  background-color: #f5efdc;
   /*background: url("../purple3.jpg") no-repeat fixed;*/
   -webkit-background-size: cover;
   -moz-background-size: cover;
